fix(Nav): Text and icon colors wasn't correct on mobile

--- a/stylus/components/nav.styl
+++ b/stylus/components/nav.styl
@@ -65,6 +65,7 @@ $nav-item-icon
     +medium-screen()
         display block
         margin-right 0
+        color var(--secondaryTextColor)
 
         svg
             margin 4px auto 5px
@@ -126,6 +127,7 @@ $nav-link
         line-height          rem(12)
         background-position  center top
         background-size      rem(24)
+        color                color var(--secondaryTextColor)
 
         &.is-active
         &:hover
